# litex-editor

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  PACKAGING.md  README.md
.github/workflows/: arch-package.yml
examples/: main.tex
packaging/arch/: .SRCINFO  .nvchecker.toml  PKGBUILD  README.md  REUSE.toml
packaging/arch/LICENSES/: 0BSD.txt
packaging/official/: maintainer-request.md
resources/applications/: io.github.pportilla.litex-editor.desktop  io.github.pportilla.minimal-latex-studio.desktop
resources/metainfo/: io.github.pportilla.litex-editor.metainfo.xml  io.github.pportilla.minimal-latex-studio.metainfo.xml
resources/themes/: smart-modern.json
scripts/: check-package.sh  export-aur.sh  prepare-release.sh
src/: main.cpp
